kubernetes/homelab/monitoring/configs/istio-system-gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: grafana
  namespace: istio-system
spec:
  selector:
    istio: gateway
  servers:
  - port:
      number: 443
      name: https
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: grafana-tls
    hosts:
    - grafanax.daddyshome.fr
